--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/stevenlangsford/minexp#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "client-sessions": "^0.8.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "helmet": "^3.9.0",
