--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ npm-debug.log
 *.dev
 .DS_Store
 *.RData #Should all be reproducable from .csv and .r files, & if there are model fits they bloat fast!
+*.png
 
 # Docker
 Dockerfile
